--- a/README.Rmd
+++ b/README.Rmd
@@ -43,8 +43,8 @@ as well as original "pch", "polygon_tiling", "regular_polygon", "rose", "text", 
 15. [text](https://trevorldavis.com/R/gridpattern/dev/reference/grid.pattern_text.html): text array/geometry patterns
 16. [wave](https://trevorldavis.com/R/gridpattern/dev/reference/grid.pattern_wave.html): wave geometry patterns
 17. [weave](https://trevorldavis.com/R/gridpattern/dev/reference/grid.pattern_weave.html): weave geometry patterns
-18. [custom ggpattern geometry-based patterns](https://coolbutuseless.github.io/package/ggpattern/articles/developing-patterns-2.html)
-19. [custom ggpattern array-based patterns](https://coolbutuseless.github.io/package/ggpattern/articles/developing-patterns-3.html)
+18. [custom geometry-based patterns](https://trevorldavis.com/R/gridpattern/dev/articles/developing-patterns.html)
+19. [custom array-based patterns](https://trevorldavis.com/R/gridpattern/dev/articles/developing-patterns.html)
 
 ## <a name="installation">Installation</a>
 
@@ -213,7 +213,7 @@ ggplot(df, aes(trt, outcome)) +
 ```{r piecepackr, fig.width=9, fig.height=9}
 library("grid")
 library("gridpattern")
-library("piecepackr") # pattern support introduced in v1.8
+library("piecepackr")
 
 tilings <- c("hexagonal", "snub_square", "pythagorean",
              "truncated_square", "triangular", "trihexagonal")
